Vectorised loops in Horner method for signatures

--- a/siglib/cpsig/cpsig.vcxproj
+++ b/siglib/cpsig/cpsig.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="cppch.h" />
     <ClInclude Include="cpSignature.h" />
     <ClInclude Include="cpTensorPoly.h" />
+    <ClInclude Include="cpVectorFuncs.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cpPathTransforms.cpp" />
