--- a/siglib/cpsig/cpsig.vcxproj.filters
+++ b/siglib/cpsig/cpsig.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="cpSignature.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cpVectorFuncs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
