--- a/siglib/cpsig/cpsig.vcxproj.filters
+++ b/siglib/cpsig/cpsig.vcxproj.filters
@@ -60,4 +60,8 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+    <None Include="Jamroot.jam" />
+  </ItemGroup>
 </Project>
