--- a/siglib/cusig/cusig.vcxproj.filters
+++ b/siglib/cusig/cusig.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="cupch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cudaConstants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cupch.cpp">
