--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,4 +1,4 @@
-name: Unit Tests
+name: Coverage
 
 on:
   push:
@@ -7,35 +7,38 @@ on:
     branches: [main]
 
 jobs:
-  test:
-    name: Test on ${{ matrix.os }} with Python ${{ matrix.python-version }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.9", "3.11"]
-
+  run:
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip==22.3.1
           python3 -m pip install -r requirements.txt
-          python3 -m pip install pytest
+          python3 -m pip install pytest pytest-cov
           python3 -m pip install iisignature
           python3 -m pip install cython
           python3 -m pip install git+https://github.com/crispitagorico/sigkernel.git
           python3 -m pip install numpy==1.26.4
 
       - name: Install package
-        run: python -m pip install .
+        run: |
+          python3 setup.py build_py
+          python -m pip install -e .
 
-      - name: Run tests
-        run: pytest
+      - name: Run tests and collect coverage
+        run: pytest --cov=pysiglib --cov-report=xml
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
