--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -17,6 +17,8 @@ babel==2.17.0
     #   sphinx
 beautifulsoup4==4.13.4
     # via pydata-sphinx-theme
+breathe==4.36.0
+    # via -r requirements.in
 certifi==2025.6.15
     # via requests
 charset-normalizer==3.4.2
@@ -71,6 +73,7 @@ soupsieve==2.7
 sphinx==8.2.3
     # via
     #   -r requirements.in
+    #   breathe
     #   pydata-sphinx-theme
     #   sphinx-book-theme
     #   sphinxcontrib-bibtex
