templated vec functions

--- a/siglib/cpsig/cpsig.vcxproj.filters
+++ b/siglib/cpsig/cpsig.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClCompile Include="cp_sig_kernel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cp_vector_funcs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
