--- a/siglib/cpsig/cpsig.vcxproj.filters
+++ b/siglib/cpsig/cpsig.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="cp_path_transforms.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cp_log_signature.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cppch.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="cp_sig_kernel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cp_log_signatures.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
