--- a/siglib/cpsig_unit_testing/cpsig_unit_testing.vcxproj.filters
+++ b/siglib/cpsig_unit_testing/cpsig_unit_testing.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="..\cpsig\cp_path_transforms.h">
       <Filter>Header Files\cpsig</Filter>
     </ClInclude>
+    <ClInclude Include="..\cpsig\cp_log_signature.h">
+      <Filter>Header Files\cpsig</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\cpsig\cppch.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files\cpsig</Filter>
     </ClCompile>
     <ClCompile Include="..\cpsig\cp_path_transforms.cpp">
+      <Filter>Source Files\cpsig</Filter>
+    </ClCompile>
+    <ClCompile Include="..\cpsig\cp_log_signatures.cpp">
       <Filter>Source Files\cpsig</Filter>
     </ClCompile>
   </ItemGroup>
