--- a/siglib/cpsig_unit_testing/cpsig_unit_testing.vcxproj
+++ b/siglib/cpsig_unit_testing/cpsig_unit_testing.vcxproj
@@ -19,6 +19,7 @@
     <ClInclude Include="..\cpsig\cp_signature.h" />
     <ClInclude Include="..\cpsig\cp_sig_kernel.h" />
     <ClInclude Include="..\cpsig\cp_tensor_poly.h" />
+    <ClInclude Include="..\cpsig\words.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\cpsig\cppch.cpp" />
@@ -29,6 +30,7 @@
     <ClCompile Include="..\cpsig\cp_sig_kernel.cpp" />
     <ClCompile Include="..\cpsig\cp_tensor_poly.cpp" />
     <ClCompile Include="..\cpsig\cp_unit_tests.cpp" />
+    <ClCompile Include="..\cpsig\words.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
