--- a/siglib/cpsig/cpsig.vcxproj.filters
+++ b/siglib/cpsig/cpsig.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="words.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="sparse.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cppch.cpp">
