--- a/siglib/cpsig/cpsig.vcxproj
+++ b/siglib/cpsig/cpsig.vcxproj
@@ -109,6 +109,7 @@
     <ClInclude Include="cp_signature.h" />
     <ClInclude Include="cp_tensor_poly.h" />
     <ClInclude Include="cp_vector_funcs.h" />
+    <ClInclude Include="log_sig_cache.h" />
     <ClInclude Include="macros.h" />
     <ClInclude Include="multithreading.h" />
     <ClInclude Include="sparse.h" />
@@ -125,6 +126,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="cp_tensor_poly.cpp" />
+    <ClCompile Include="log_sig_cache.cpp" />
     <ClCompile Include="words.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
