--- a/siglib/cpsig/cpsig.vcxproj.filters
+++ b/siglib/cpsig/cpsig.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="sparse.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="log_sig_cache.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cppch.cpp">
@@ -78,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="words.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="log_sig_cache.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
