--- a/siglib/cpsig_unit_testing/cpsig_unit_testing.vcxproj.filters
+++ b/siglib/cpsig_unit_testing/cpsig_unit_testing.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="..\cpsig\sparse.h">
       <Filter>Header Files\cpsig</Filter>
     </ClInclude>
+    <ClInclude Include="..\cpsig\log_sig_cache.h">
+      <Filter>Header Files\cpsig</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\cpsig\cppch.cpp">
@@ -78,6 +81,9 @@
       <Filter>Source Files\cpsig</Filter>
     </ClCompile>
     <ClCompile Include="..\cpsig\words.cpp">
+      <Filter>Source Files\cpsig</Filter>
+    </ClCompile>
+    <ClCompile Include="..\cpsig\log_sig_cache.cpp">
       <Filter>Source Files\cpsig</Filter>
     </ClCompile>
   </ItemGroup>
